[project]
name = "linkwatch"
authors = [{ name = "DogFortune" }]
description = "Perform connectivity checks on URLs listed in the Markdown"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = ["tqdm", "dataclasses-json"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
linkwatch = "linkwatch.app:main"

[project.urls]
Homepage = "https://github.com/DogFortune/LinkWatch"
Isues = "https://github.com/DogFortune/LinkWatch/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
